--- a/app/templates/marketplace/product_detail.html
+++ b/app/templates/marketplace/product_detail.html
@@ -3,8 +3,31 @@
 {% block content %}
 <div class="row g-4">
   <div class="col-lg-6">
-    {% set img = product.images[0].image_url if product.images else "https://picsum.photos/seed/item/900/700" %}
-    <img src="{{ img }}" class="img-fluid rounded-4 border" alt="product">
+    {% set imgs = product.media | selectattr("media_type", "equalto", "image") | list %}
+    {% set vids = product.media | selectattr("media_type", "equalto", "video") | list %}
+
+    {% set main_img = imgs[0].url if imgs else "https://picsum.photos/seed/item/900/700" %}
+
+    <img src="{{ main_img }}" class="img-fluid rounded-4 border" alt="product">
+
+    {% if imgs|length > 1 %}
+      <div class="d-flex gap-2 mt-3 flex-wrap">
+        {% for m in imgs %}
+          <img src="{{ m.url }}" style="width:72px;height:72px;object-fit:cover;" class="rounded border" alt="thumb">
+        {% endfor %}
+      </div>
+    {% endif %}
+
+    {% if vids %}
+      <div class="mt-3">
+        <div class="fw-semibold mb-1">Video</div>
+        <video class="w-100 rounded border" controls>
+          <source src="{{ vids[0].url }}">
+          Your browser does not support the video tag.
+        </video>
+      </div>
+    {% endif %}
+
   </div>
   <div class="col-lg-6">
     <div class="d-flex gap-2 align-items-center">
