--- a/app/templates/marketplace/sell.html
+++ b/app/templates/marketplace/sell.html
@@ -9,13 +9,18 @@
         <form method="post" enctype="multipart/form-data">
           {{ form.hidden_tag() }}
           <div class="row g-3">
-            <div class="col-md-8">
+            <div class="col-md-6">
               {{ form.title.label(class="form-label") }}
               {{ form.title(class="form-control") }}
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
               {{ form.price.label(class="form-label") }}
               {{ form.price(class="form-control") }}
+            </div>
+            <div class="col-md-3">
+              {{ form.quantity.label(class="form-label") }}
+              {{ form.quantity(class="form-control") }}
+              <div class="form-text">Available stock for this listing.</div>
             </div>
             <div class="col-md-6">
               {{ form.category_id.label(class="form-label") }}
